@@ -59,3 +59,9 @@
 	upon detection of the DocBook toolchain.
 2015-11-20 Fred Gleason <fredg@paravelsystems.com>
 	* Added a '--disable-docbook' switch in 'configure'ac'.
+2015-11-20 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed warnings in 'rivendell/listcart.c'.
+	* Fixed warnings in 'rivendell/addcut.c'.
+	* Fixed warnings in 'rivendell/editcart.c'.
+	* Fixed warnings in 'rivendell/editcut.c'.
+	* Fixed warnings in 'rivendell/import.c'.
